# sampler-rs

./: Cargo.toml  README.md
src/: bin.rs  editor.rs  halfband.rs  lib.rs  parameters.rs  resources.rs  sampler.rs  style.css  ui.rs  utils.rs  voice.rs
src/sampler/: fir.rs
src/ui/: plot.rs  sampler.rs
